--- a/Della-HK-purchase/src/main/resources/conf.properties
+++ b/Della-HK-purchase/src/main/resources/conf.properties
@@ -28,3 +28,5 @@ messageType=text/html;charset\=utf-8
 upLoadSchedule=0 0 15 * * ?
 upLoadScheduleSecond=0 0 20 * * ?
 upLoadScheduleThird=0 0 1 * * ?
+
+saveLocal=/usr/local/apporder/Della/savedOrders/
