--- a/giglio-stock/bin/sop.properties
+++ b/giglio-stock/bin/sop.properties
@@ -1,5 +1,5 @@
 
-
+supplierId=2015091801508
 #服务地址
 HOST=@db.SOP.HOST@
 #supplier key
@@ -8,6 +8,9 @@ APP_KEY=a490b887129a401f9f97ca1886c3779d
 APP_SECRET =249409200b6140e8ba181bf68979baf0
 
 updateStartTime=2015-01-01 00:00
+
+jobsSchedule=0 10 0/1 * * ? 
+time=5400000
 
 
 
