--- a/Daniello/build.gradle
+++ b/Daniello/build.gradle
@@ -1,12 +1,9 @@
-
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
-
+		   "net.sourceforge.javacsv:javacsv:2.0",
             project(':iog-common-product'),
-
     )
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
 jar {
