--- a/iog-product-web/build.gradle
+++ b/iog-product-web/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     providedCompile ("javax.servlet:javax.servlet-api:3.1.0")
     compile project(':iog-common-product')
+    compile project(':iog-generater-util')
 }
