--- a/tonySub-purchase/src/main/resources/conf.properties
+++ b/tonySub-purchase/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
 supplierId=2015092201518
 supplierNo=S0000451
-url=http://www.cs4b.eu/ws/
+url=http://www.cloudstore.srl/ws/
 key = fb8ea6839b486dba8c5cabb374c03d9d
 #/minute
 period = 30
