--- a/GiBiLogic/build.gradle
+++ b/GiBiLogic/build.gradle
@@ -2,6 +2,8 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
            	"com.google.code.gson:gson:2.3.1",
+           	"org.apache.poi:poi:3.13",
+           	"org.apache.poi:poi-ooxml:3.13",
             project(':iog-common-product'),
             project(':iog-product-framework')
     )
