--- a/stefaniamode/src/main/resources/conf.properties
+++ b/stefaniamode/src/main/resources/conf.properties
@@ -1,7 +1,7 @@
-#supplierId=2015092401528
+supplierId=2015092401528
 url=https://www.stefaniamode.com/feeds/StefaniaMode.xml
 day=90
 #picpath=/usr/local/app/stefaniamode/picture/
 picpath=
 #test
-supplierId=201606161107
+#supplierId=201606161107
