--- a/GiBiLogic-stock/build.gradle
+++ b/GiBiLogic-stock/build.gradle
@@ -1,17 +1,13 @@
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
-           	"com.google.code.gson:gson:2.3.1",
-           	"commons-io:commons-io:2.5",
-           	"org.apache.poi:poi:3.13",
-           	"org.apache.poi:poi-ooxml:3.13",
-            project(':iog-common-product'),
-            project(':iog-product-framework')
+    		project(':iog-common-product'),
+            project(':openapi-ice'),
+			"com.google.code.gson:gson:2.3.1"
     )
 }
 
 jar {
-
     dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
    // def manifestCp = configurations.compile.files.collect  {
@@ -20,9 +16,7 @@ jar {
    // }.join(' ')
 
     manifest {
-   		 attributes 'Main-Class': 'com.shangpin.iog.tiziana.StartUp'
-   
-   
+   		 attributes 'Main-Class': 'com.shangpin.iog.gibilogic.stock.Startup'
    //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
