--- a/russoCapri/src/main/resources/conf.properties
+++ b/russoCapri/src/main/resources/conf.properties
@@ -1,7 +1,7 @@
 supplierId=2016030701799
 #url=http://82.185.221.164/ws_sito/ws_sito_p15.asmx/
 url=http://82.185.221.164:8580/ws_sito/ws_sito_p15.asmx/
-username=shangpin
+username=at98w-IIS
 password=Polo2012
 day=90
 #picpath=/mnf/nfs/theclutcher/
