--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,7 @@ include 'iog-facade-impl'
 include 'iog-sop'
 include 'iog-generater-util'
 include 'iog-web-apiHandler'
-
+include 'iog-product-web'
 
 
 
