--- a/levelgroup/build.gradle
+++ b/levelgroup/build.gradle
@@ -18,21 +18,21 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib, copyResources ,dependsClassPath
+    dependsOn copyToLib, copyResources
     exclude ("**/*.properties")
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
 //    }
 
-   // def manifestCp = configurations.compile.files.collect {
-      //  File file = it
-        //"lib/${file.name}"
-    //}.join(' ')
+    def manifestCp = configurations.compile.files.collect {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.levelgroup.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        //attributes 'Class-Path': '. ./conf/  ' + manifestCp
+        attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
