--- a/openapi-ice/src/main/resources/openice.properties
+++ b/openapi-ice/src/main/resources/openice.properties
@@ -2,6 +2,6 @@
 wmsUrl=@db.wmsUrl@
 fromEmail=chengxu@shangpin.com
 emailPass=shangpin001
-email=qiujunwei@shangpin.com,lizhongren@shangpin.com
+email=lizhongren@shangpin.com
 delay=20
 redisUrl=@db.redisUrl@
