--- a/atelier-ostore/src/main/resources/conf.properties
+++ b/atelier-ostore/src/main/resources/conf.properties
@@ -1,4 +1,6 @@
 supplierId=2015082701461
 url=http://95.227.147.192/WS_SITO/WS_SITO_P15.ASMX/
 day=90
-oldurl=http://b2b.officinastore.com/Scambio/Atelier/Shangpin/shangpin.csv
+oldurl=http\://b2b.officinastore.com/Scambio/Atelier/Shangpin/shangpin.csv
+
+savePath=
