--- a/project-common/src/main/resources/redis.properties
+++ b/project-common/src/main/resources/redis.properties
@@ -9,9 +9,9 @@ redis.pool.testOnBorrow=true
 
 redis.pool.testOnReturn=true
 €
-redis.url=@db.redis.url@
-redis.port=@db.redis.port@
-redis.password=@db.redis.password@
-#redis.url=172.20.10.127
-#redis.port=6379
-#redis.password=
+#redis.url=@db.redis.url@
+#redis.port=@db.redis.port@
+#redis.password=@db.redis.password@
+redis.url=172.20.10.127
+redis.port=6379
+redis.password=
