--- a/rosi-stock/src/main/resources/conf.properties
+++ b/rosi-stock/src/main/resources/conf.properties
@@ -1,5 +1,6 @@
 supplierId=2016021901776
-uri=http://www.firebrands.it/shangpin
+#uri=http://www.firebrands.it/shangpin
+uri=https://www.firebrands.it/shangpin
 
 jobsSchedule=0 0 0/1 * * ?
 time=3600000
