--- a/rosi/src/main/resources/conf.properties
+++ b/rosi/src/main/resources/conf.properties
@@ -1,5 +1,6 @@
 #test 201602171147
 supplierId=2016021901776
-uri=http://www.firebrands.it/shangpin
+#uri=http://www.firebrands.it/shangpin
+uri=https://www.firebrands.it/shangpin
 day=90
 path=
