--- a/openapi-ice/src/main/resources/openice.properties
+++ b/openapi-ice/src/main/resources/openice.properties
@@ -5,3 +5,8 @@ emailPass=shangpin001
 email=qiujunwei@shangpin.com,lizhongren@shangpin.com
 delay=20
 redisUrl=@db.redisUrl@
+
+#yyyy-MM-dd HH:mm
+expStartTime=
+#yyyy-MM-dd HH:mm
+expEndTime=
