拉取采购单信息 增加日志

--- a/atelier-ostore-stock/src/main/resources/conf.properties
+++ b/atelier-ostore-stock/src/main/resources/conf.properties
@@ -1,2 +1,2 @@
 supplierId=2015082701461
-url=http://95.227.147.192/WS_SITO/WS_SITO_P15.ASMX/
+url=http://188.11.248.175/WS_SITO_p15/WS_SITO_P15.ASMX
