filippo 增加订单状态查询

--- a/filippo-order/src/main/resources/conf.properties
+++ b/filippo-order/src/main/resources/conf.properties
@@ -5,3 +5,7 @@ startDateOfTemp=
 endDateOfTemp=
 orderurl=http://stat.filippomarchesani.net:2060/gw/collect.php/
 flag=520
+checkoutOrderSchedule=0 0/2 * * * ?
+confirmOrderSchedule=0 0/2 * * * ?
+shipOrderSchedule=0 0 1 * * ?
+invoiceSchedule=0 0 1 * * ?
