增加订单查询日志

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,4 +23,5 @@ include 'filippo-order'
 include 'bagheera-stock'
 include 'coltorti'
 include 'atelier-ostore-order'
+include 'deliberti-purchase'
 
