更新的程序

--- a/brunarosso-order/src/main/resources/conf.properties
+++ b/brunarosso-order/src/main/resources/conf.properties
@@ -1,5 +1,7 @@
-supplierId=
-supplierNo=
+supplierId=2015091801507
+supplierNo=S0000435
+
+jobsSchedule=0 0/2 * * * ?
 
 startDateOfTemp=
 endDateOfTemp=
