--- a/giglio-purchase/src/main/resources/conf.properties
+++ b/giglio-purchase/src/main/resources/conf.properties
@@ -1,11 +1,13 @@
-supplierId=2016050401882
+supplierId=2015091801508
 supplierNo=S0000781
 startDateOfTemp=
 endDateOfTemp=
-path=/usr/local/apporder/atelierLindeOrder/orders/
+
+jobsSchedule=0 0/2  * * * ?
+
 smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
 fromUserPassword=shangpin001
-to=houkun@shangpin.com
-subject=giglio's orders
+to=lubaijiang@shangpin.com
+subject=
 messageType=text/html;charset=utf-8
