--- a/brunarosso-stock/src/main/resources/param.properties
+++ b/brunarosso-stock/src/main/resources/param.properties
@@ -1,4 +1,6 @@
-localFilePath = /usr/local/app/brunarosso/file
-path=/usr/local/app/brunarosso/file
+#localFilePath = /usr/local/app/brunarosso/file
+localFilePath=F:\\
+#path=/usr/local/app/brunarosso/file
+path=F:\\
 supplierId = 2015091801507
 email=qiujunwei@shangpin.com,lizhongren@shangpin.com
