--- a/brunarosso-stock/src/main/resources/sop.properties
+++ b/brunarosso-stock/src/main/resources/sop.properties
@@ -9,6 +9,8 @@ APP_SECRET =43e578550e9047b5936f7bc44876061d
 
 email=qiujunwei@shangpin.com,lizhongren@shangpin.com
 
+supplierId=2015091801507
+
 
 
 
