更新库存将供货商添加UPDATE_STOCK表

--- a/studio69/src/main/resources/conf.properties
+++ b/studio69/src/main/resources/conf.properties
@@ -4,3 +4,5 @@ url=http://studio69.atelier98.net/api_studio69/api_studio69.asmx/
 username=studio69
 password=fw6pMqvDnoRAQ2
 day=90
+
+savePath=F:\\
