订单代码机

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,7 +18,7 @@ include 'iog-generater-util'
 include 'iog-web-apiHandler'
 include 'filippo-order'
 include 'spinnaker-order'
-
+include 'CodeGenrate-Order'
 
 include 'iog-product-web'
 include 'filippo-order'
