--- a/settings.gradle
+++ b/settings.gradle
@@ -18,11 +18,20 @@ include 'iog-generater-util'
 include 'iog-web-apiHandler'
 include 'filippo-order'
 include 'spinnaker-order'
-include 'CodeGenrate-Order'
 
-include 'iog-product-web'
-include 'filippo-order'
-include 'bagheera-stock'
-include 'coltorti'
-include 'atelier-ostore-order'
-
+include 'Monti-stock'
+include 'hottest'
+include 'paoloFirillo'
+include 'atelier-paolo'
+include 'removePicOfStefaniamode'
+include 'brunarosso-stock'
+include 'theclutcher-stock'
+include 'brunarosso20-stock'
+include 'grouppo-stock'
+include 'atelier-test'
+include 'russoCapri'
+include 'itemInfo-stock'
+include 'itemInfo'
+include 'atelier-ostore'
+include 'studio69'
+include 'studio69-stock'
