--- a/studio69/src/main/resources/conf.properties
+++ b/studio69/src/main/resources/conf.properties
@@ -1,8 +1,8 @@
 #test
-supplierId=201602011720
+supplierId=201602011720222
 url=http://studio69.atelier98.net/api_studio69/api_studio69.asmx/
-username=studio69
-password=fw6pMqvDnoRAQ2
+username=SHANGPIN
+password=2MWWKgNSxgf
 day=90
 
-savePath=F:\\
+savePath=F\:\\studio69
