--- a/atelier-paolo/src/main/resources/conf.properties
+++ b/atelier-paolo/src/main/resources/conf.properties
@@ -2,3 +2,4 @@ supplierId=2016012101751
 #url=http://188.217.250.212:8580/ws_sito/ws_sito_p15.asmx/
 url=http://93.46.213.149:8580/ws_sito/ws_sito_p15.asmx/
 day=90
+filepath=
