--- a/revolve-stock/src/main/resources/conf.properties
+++ b/revolve-stock/src/main/resources/conf.properties
@@ -1,8 +1,7 @@
 url=http://52.79.191.130/shangping/feed/products
 supplierId=201605101521
-time=60
+time=5400000
 day=90
 picpath=
-filepath=/usr/local/appstock/revolve/products.txt
+filepath=/usr/local/appstock/revolve/
 jobsSchedule=0 0 0/1 * * ? 
-time=5400000
