增加订单查询日志

--- a/stefaniamode-stock/src/main/resources/conf.properties
+++ b/stefaniamode-stock/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
 supplierId=2015092401528
-url=https://www.stefaniamode.com/feeds/StefaniaMode.xml
+url=https://www.stefaniamode.com/newfeeds/StefaniaMode.xml
 jobsSchedule=45 10 0/1 * * ? 
 time=5400000
