--- a/stefaniamode/src/main/resources/conf.properties
+++ b/stefaniamode/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 supplierId=2015092401528
-url=https://www.stefaniamode.com/feeds/StefaniaMode.xml
+url=https://www.stefaniamode.com/newfeeds/StefaniaMode.xml
 day=90
 #picpath=/usr/local/app/stefaniamode/picture/
 picpath=
