--- a/atelier-ostore-order/src/main/resources/conf.properties
+++ b/atelier-ostore-order/src/main/resources/conf.properties
@@ -1,5 +1,18 @@
 #供应商ID
 #supplierId=2015091701503
 supplierId=2015082701461
-url=http://188.11.248.175/WS_SITO/WS_SITO_P15.ASMX
-supplierNo=S0000619
+supplierNo=S0000394
+
+startDateOfTemp=
+endDateOfTemp=
+
+jobSchedule=0 0/2 * * * ? 
+jobConfirmSchedule=0 0/2 * * * ? 
+
+url=http://188.11.248.175/WS_SITO_p15/WS_SITO_P15.ASMX/
+#SetStatusOrderMarketplace
+createOrder_interface=NewOrder
+setStatus_interface=SetStatusOrderMarketplace
+getStatus_interface=GetStatusOrderMarketplace
+user=shangpin
+password=shang0807
