--- a/atelier-ostore-order/src/main/resources/log4j.properties
+++ b/atelier-ostore-order/src/main/resources/log4j.properties
@@ -1,14 +1,8 @@
 #root
-log4j.rootLogger=WARN, spring
-log4j.appender.spring=org.apache.log4j.ConsoleAppender
-log4j.appender.spring.layout=org.apache.log4j.PatternLayout
-log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
-
-#通用日志配置
-log4j.rootCategory=ERROR, file
+log4j.rootLogger=WARN, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
-log4j.appender.file.File=log/linoricci-purchase-logs.log
+log4j.appender.file.File=log/atelierO-purchase-logs.log
 log4j.appender.file.Append=true
 log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=0
@@ -23,7 +17,7 @@ log4j.logger.info=INFO, info
 #规定每天产生日志的格式
 log4j.appender.info=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.info.Encoding=UTF-8
-log4j.appender.info.File=log/linoricci-purchase-info.log
+log4j.appender.info.File=log/atelierO-purchase-info.log
 log4j.appender.info.Append=true
 log4j.appender.info.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.info.MaxFileSize=1MB
@@ -38,7 +32,7 @@ log4j.logger.error=ERROR, error
 #规定每天产生日志的格式
 log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.error.Encoding=UTF-8
-log4j.appender.error.File=log/linoricci-purchase-error.log
+log4j.appender.error.File=log/atelierO-purchase-error.log
 log4j.appender.error.Append=true
 log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
