--- a/stefaniamode-stock/build.gradle
+++ b/stefaniamode-stock/build.gradle
@@ -14,19 +14,18 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
-//	,dependsClassPath
+    dependsOn copyToLib , copyResources	,dependsClassPath
     exclude ("**/*.properties")
 
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+//    def manifestCp = configurations.compile.files.collect  {
+//        File file = it
+//        "lib/${file.name}"
+//    }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.stefaniamode.stock.GrabStockImp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.stefaniamode.stock.schedule.Startup'
+//        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
