atelier模板以及iog导出

--- a/Atelier-stock-template/build.gradle
+++ b/Atelier-stock-template/build.gradle
@@ -17,7 +17,7 @@ jar {
 
     manifest {
 	
-   		 attributes 'Main-Class': 'com.shangpin.iog.Atelier-template.stock.StockImp'
+   		 attributes 'Main-Class': 'com.shangpin.iog.Atelier.stock.StockImp'
     
    
     }
