--- a/Atelier-template/build.gradle
+++ b/Atelier-template/build.gradle
@@ -15,7 +15,7 @@ jar {
     exclude ("**/*.properties")
 
     manifest {
-   		 attributes 'Main-Class': 'com.shangpin.iog.Atelier-template.StartUp'
+   		 attributes 'Main-Class': 'com.shangpin.iog.atelier.StartUp'
    
     }
 }
