--- a/atelier-ostore-order/build.gradle
+++ b/atelier-ostore-order/build.gradle
@@ -4,7 +4,7 @@ dependencies {
         "com.google.code.gson:gson:2.2.2",
         project(':project-common'),
         project(':openapi-ice'),
-        //project(':iog-common-product'),
+        project(':iog-common-product'),
            
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
