--- a/atelier-ostore-order/src/main/resources/conf.properties
+++ b/atelier-ostore-order/src/main/resources/conf.properties
@@ -10,9 +10,17 @@ jobSchedule=0 0/2 * * * ?
 jobConfirmSchedule=0 0/2 * * * ? 
 
 url=http://188.11.248.175/WS_SITO_p15/WS_SITO_P15.ASMX/
-#SetStatusOrderMarketplace
-createOrder_interface=NewOrder
+#NewOrderMarketPlace  NewOrder
+createOrder_interface=NewOrderMarketPlace
 setStatus_interface=SetStatusOrderMarketplace
 getStatus_interface=GetStatusOrderMarketplace
+getItemStock_interface=GetItemStockBySizeMarketPlace
 user=shangpin
 password=shang0807
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=amanda.lee@shangpin.com,lubaijiang@shangpin.com
+subject=
+messageType=text/html;charset=utf-8
