--- a/dante5-stock/build.gradle
+++ b/dante5-stock/build.gradle
@@ -11,15 +11,15 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib , copyResources 
+    dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
-	    def manifestCp = configurations.compile.files.collect  {
-	        File file = it
-	        "lib/${file.name}"
-	    }.join(' ')
+	    //def manifestCp = configurations.compile.files.collect  {
+	    //    File file = it
+	    //    "lib/${file.name}"
+	    //}.join(' ')
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.dante5.stock.schedule.Startup'
-        	        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
+       // 	        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
