studio69拉取产品和更新库存

--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -1,4 +1,3 @@
-
 day=90
 picpath=
 
@@ -14,12 +13,23 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##leam
-supplierId=2016080210300001
-api_url=http://62.101.102.194:1080/ws_sito_p15/ws_sito_p15.asmx/
+#supplierId=2016080210300001
+#api_url=http://62.101.102.194:1080/ws_sito_p15/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=Leam1803
+#savePath=F\:\\Atelier-template
+
+##Daniello
+supplierId=2016011201731
+api_url=http://79.62.242.6:8088/ws_sito/ws_sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=Leam1803
+password=Daniello0203
 savePath=F\:\\Atelier-template
