--- a/studio69-stock/src/main/resources/conf.properties
+++ b/studio69-stock/src/main/resources/conf.properties
@@ -2,3 +2,6 @@ supplierId=201602011720
 url=http://studio69.atelier98.net/api_studio69/api_studio69.asmx/
 username=SHANGPIN
 password=2MWWKgNSxgf
+
+jobsSchedule=0 45 0/1 * * ? 
+time=3600000
