--- a/studio69/build.gradle
+++ b/studio69/build.gradle
@@ -22,7 +22,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.daniello.StartUp'
+        attributes 'Main-Class': 'com.shangpin.iog.studio69.Startup'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
