修改o的拉取策略

--- a/settings.gradle
+++ b/settings.gradle
@@ -26,4 +26,5 @@ include 'bagheera-stock'
 include 'coltorti'
 include 'atelier-ostore-order'
 include 'biondini-stock'
+include 'atelier-ostore-stock'
 
