--- a/atelier-ostore-stock/src/main/resources/sop.properties
+++ b/atelier-ostore-stock/src/main/resources/sop.properties
@@ -4,7 +4,7 @@ APP_KEY=8353086ab69f4840876abdf52e2d6746
 APP_SECRET =1d90dae197f14b0f9abbe5746bec57d7
 supplierId=2015081401431
 #url=http://95.227.147.192/WS_SITO/WS_SITO_P15.ASMX/
-url=http://188.11.248.175/WS_SITO_p15/WS_SITO_P15.ASMX
+url=http://188.11.248.175/WS_SITO_p15/WS_SITO_P15.ASMX/
 jobsSchedule=0 0 0/1 * * ? 
 time=5400000
 
