filippo 增加订单状态查询

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,4 +25,7 @@ include 'filippo-order'
 include 'bagheera-stock'
 include 'coltorti'
 include 'atelier-ostore-order'
+include 'biondini-stock'
+include 'grouppo-stock'
+include 'grouppo'
 
