--- a/Atelier-stock-template/src/main/resources/conf.properties
+++ b/Atelier-stock-template/src/main/resources/conf.properties
@@ -2,9 +2,26 @@
 jobsSchedule=0 45 0/1 * * ? 
 time=3600000
 
-supplierId=2015121101695
-api_url=http://88.147.104.180/ws_sito_p15/ws_sito_p15.asmx/
+##Vietti
+#supplierId=2015121101695
+#api_url=http://88.147.104.180/ws_sito_p15/ws_sito_p15.asmx/
+#sku_interface=GetAllAvailabilityMarketplace
+#userName=shangpin
+#password=shang1307
+#savePath=F\:\\Atelier-stock-template
+
+##leam
+supplierId=2015081701441
+api_url=http://62.101.102.194:1080/ws_sito_p15/ws_sito_p15.asmx/
 sku_interface=GetAllAvailabilityMarketplace
 userName=shangpin
-password=shang1307
+password=Leam1803
 savePath=F\:\\Atelier-stock-template
+
+##italiani
+#supplierId=201608101733
+#api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
+#sku_interface=GetAllAvailabilityMarketplace
+#userName=shangpin
+#password=italiani
+#savePath=F\:\\Atelier-stock-template
