--- a/acanfora-stock/src/main/resources/sop.properties
+++ b/acanfora-stock/src/main/resources/sop.properties
@@ -7,6 +7,7 @@ APP_KEY=9c882360ee4a40a69c400af88d2baf9c
 #supplier secret
 APP_SECRET =d0425ae9c24b4d7cb7bc65d9365c8962
 
-
+jobsSchedule=0 0 0/1 * * ? 
+time=5400000
 
 
