--- a/monnierfreres-stock/src/main/resources/sop.properties
+++ b/monnierfreres-stock/src/main/resources/sop.properties
@@ -1,11 +1,13 @@
 
-
+jobsSchedule=0 45 0/1 * * ? 
+time=3600000
 #服务地址
-HOST=@db.SOP.HOST@
+HOST=http://open.shangpin.com:8080
 #supplier key
 APP_KEY=7d21266366c24e40984364b25175d4f3
 #supplier secret
 APP_SECRET =10439a15b286417db8ecd97c5f72d49a
+supplierId=2015101001587
 
 
 
