--- a/tessabit-stock/src/main/resources/sop.properties
+++ b/tessabit-stock/src/main/resources/sop.properties
@@ -7,6 +7,8 @@ APP_KEY=f82cd9c9eeee4ee584acdff5b3b5d73c
 #supplier secret
 APP_SECRET =ec44c8cf8afb4c4c80e66ffd90d8e9b6
 
+jobsSchedule=0 0 0/1 * * ? 
+time=5400000
 
 
 
