--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -13,7 +13,7 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##leam
-#supplierId=2016080210300001
+#supplierId=2015081701441
 #api_url=http://62.101.102.194:1080/ws_sito_p15/ws_sito_p15.asmx/
 #spu_interface=GetAllItemsMarketplace
 #sku_interface=GetAllAvailabilityMarketplace
@@ -24,12 +24,23 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##Daniello
-supplierId=2016011201731
-api_url=http://79.62.242.6:8088/ws_sito/ws_sito_p15.asmx/
+#supplierId=2016011201731
+#api_url=http://79.62.242.6:8088/ws_sito/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=Daniello0203
+#savePath=F\:\\Atelier-template
+
+##italiani
+supplierId=201608101733
+api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=Daniello0203
+password=italiani
 savePath=F\:\\Atelier-template
