--- a/GiBiLogic-stock/build.gradle
+++ b/GiBiLogic-stock/build.gradle
@@ -16,7 +16,7 @@ jar {
    // }.join(' ')
 
     manifest {
-   		 attributes 'Main-Class': 'com.shangpin.iog.gibilogic.stock.Startup'
+   		 attributes 'Main-Class': 'com.shangpin.iog.gibilogic.stock.schedule.Startup'
    //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
