--- a/GiBiLogic/build.gradle
+++ b/GiBiLogic/build.gradle
@@ -20,7 +20,7 @@ jar {
    // }.join(' ')
 
     manifest {
-   		 attributes 'Main-Class': 'com.shangpin.iog.tiziana.StartUp'
+   		 attributes 'Main-Class': 'com.shangpin.iog.gibilogic.service.GibiLogicServiceIml'
    
    
    //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
