--- a/eleonorabonucci-stock/build.gradle
+++ b/eleonorabonucci-stock/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     compile(
             project(':project-common'),
             project(':iog-sop'),
-            project(':eleonorabonucci')
+          
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -14,19 +14,19 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
 
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+  //  def manifestCp = configurations.compile.files.collect  {
+  //      File file = it
+   //     "lib/${file.name}"
+  //  }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.eleonorabonucci.stock.GrabStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+ //       attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
