--- a/galiano-stock/build.gradle
+++ b/galiano-stock/build.gradle
@@ -16,19 +16,19 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+  //  def manifestCp = configurations.compile.files.collect  {
+  //      File file = it
+  //      "lib/${file.name}"
+  //  }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.galiano.stock.GrabStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
+     //   attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
