--- a/iog-web-container/bin/log4j.properties
+++ b/iog-web-container/bin/log4j.properties
@@ -1,52 +1,66 @@
-#log4j.properties file
+##log4j.properties file
+#
+########################################################################
+## Categories and levels
+########################################################################
+##Appender Configuration
+#log4j.rootLogger=ERROR, FileApp, ConApp
+#
+#
+#
+#
+#
+#log4j.appender.logfile.encoding=UTF-8
+########################################################################
+## Appenders
+########################################################################
+## ConApp is set to be a ConsoleAppender.
+#log4j.appender.ConApp.Threshold=ERROR
+#log4j.appender.ConApp=org.apache.log4j.ConsoleAppender
+## ConApp uses PatternLayout.
+#log4j.appender.ConApp.layout=org.apache.log4j.PatternLayout
+## Define Pattern
+#log4j.appender.ConApp.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+#
+#log4j.logger.com.apache.ibatis=ERROR
+#log4j.logger.com.apache.ibatis.common.jdbc.SimpleDataSource=ERROR
+#log4j.logger.com.apache.ibatis.common.jdbc.ScriptRunner=ERROR
+#log4j.logger.com.apache.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=ERROR
+#
+#log4j.logger.java.sql.Connection = ERROR
+#log4j.logger.java.sql.Statement = ERROR
+#log4j.logger.java.sql.PreparedStatement = ERROR
+#log4j.logger.java.sql.ResultSet = ERROR
+#
+#
+#
+#
+## FileApp
+#log4j.appender.FileApp.Threshold=ERROR
+#log4j.appender.FileApp=org.apache.log4j.RollingFileAppender
+#log4j.appender.FileApp.file=/usr/local/iog.log
+#log4j.appender.FileApp.MaxFileSize=2000KB
+#log4j.appender.FileApp.MaxBackupIndex=1
+##log4j.appender.FileApp.DatePattern='.'yyyy-MM-dd 
+#log4j.appender.FileApp.layout=org.apache.log4j.PatternLayout 
+#log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n 
+#
+##log4j.logger.org.jboss.cache=debug
+#logging.level.org.springframework=ERROR
+#logging.level.org.hibernate=ERROR
+#
+#log4j.logger.com.shangpin.iog=ERROR
 
-#######################################################################
-# Categories and levels
-#######################################################################
-#Appender Configuration
-log4j.rootLogger=ERROR, FileApp, ConApp
 
-
-
-
-
-log4j.appender.logfile.encoding=UTF-8
-#######################################################################
-# Appenders
-#######################################################################
-# ConApp is set to be a ConsoleAppender.
-log4j.appender.ConApp.Threshold=ERROR
-log4j.appender.ConApp=org.apache.log4j.ConsoleAppender
-# ConApp uses PatternLayout.
-log4j.appender.ConApp.layout=org.apache.log4j.PatternLayout
-# Define Pattern
-log4j.appender.ConApp.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
-
-log4j.logger.com.apache.ibatis=ERROR
-log4j.logger.com.apache.ibatis.common.jdbc.SimpleDataSource=ERROR
-log4j.logger.com.apache.ibatis.common.jdbc.ScriptRunner=ERROR
-log4j.logger.com.apache.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=ERROR
-
-log4j.logger.java.sql.Connection = ERROR
-log4j.logger.java.sql.Statement = ERROR
-log4j.logger.java.sql.PreparedStatement = ERROR
-log4j.logger.java.sql.ResultSet = ERROR
-
-
-
-
-# FileApp
-log4j.appender.FileApp.Threshold=ERROR
-log4j.appender.FileApp=org.apache.log4j.RollingFileAppender
-log4j.appender.FileApp.file=/usr/local/iog.log
-log4j.appender.FileApp.MaxFileSize=2000KB
-log4j.appender.FileApp.MaxBackupIndex=1
-#log4j.appender.FileApp.DatePattern='.'yyyy-MM-dd 
-log4j.appender.FileApp.layout=org.apache.log4j.PatternLayout 
-log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n 
-
-#log4j.logger.org.jboss.cache=debug
-logging.level.org.springframework=ERROR
-logging.level.org.hibernate=ERROR
-
-log4j.logger.com.shangpin.iog=ERROR
+log4j.rootLogger=DEBUG, Console  
+  
+#Console  
+log4j.appender.Console=org.apache.log4j.ConsoleAppender  
+log4j.appender.Console.layout=org.apache.log4j.PatternLayout  
+log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n  
+  
+log4j.logger.java.sql.ResultSet=INFO  
+log4j.logger.org.apache=INFO  
+log4j.logger.java.sql.Connection=DEBUG  
+log4j.logger.java.sql.Statement=DEBUG  
+log4j.logger.java.sql.PreparedStatement=DEBUG   
