--- a/monnierfreres-stock/build.gradle
+++ b/monnierfreres-stock/build.gradle
@@ -11,18 +11,12 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
-
-
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.monnierfreres.stock.StockImp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+       
     }
 
 }
