--- a/tessabit-stock/build.gradle
+++ b/tessabit-stock/build.gradle
@@ -23,17 +23,17 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+ //   def manifestCp = configurations.compile.files.collect  {
+ //       File file = it
+ //       "lib/${file.name}"
+ //   }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.tessabit.stock.TessabitStockImp'
 
-        attributes 'Class-Path': '.  ./conf/ ' +  manifestCp
+  //      attributes 'Class-Path': '.  ./conf/ ' +  manifestCp
     }
 }
