下载图片修改

--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -49,3 +49,5 @@ pavin=2015093001569
 supplierId_diffSeason=2015081701439
 sendMaildiffSeason_Schedule=0 24 14 * * ?
 diffSeasonFilepath=/usr/local/tomcat7/webapps/diffSeason.csv
+
+pictmpdownloadpath=/data/picturetem/
