--- a/galiano-stock/bin/sop.properties
+++ b/galiano-stock/bin/sop.properties
@@ -7,6 +7,7 @@ APP_KEY=fff4f41b56fb4e829b864aa8b0ea5193
 #supplier secret
 APP_SECRET =89ffb6f7f68b4f4c8b3f3ebaafba90bd
 
-
+jobsSchedule=0 0 0/1 * * ? 
+time=5400000
 
 
