--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -8,7 +8,7 @@ smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
 fromUserPassword=shangpin001
 #to=lubaijiang@shangpin.com
-to=joyce.xia@shangpin.com,lizhongren@shangpin.com,lubaijiang@shangpin.com,amanda.lee@shangpin.com,wangsaying@shangpin.com,maggie.zhang@shangpin.com,liufang@shangpin.com,zhaomanman@shangpin.com,wangwei@shangpin.com,liuhuihui@shangpin.com,liming@shangpin.com,guolihong@shangpin.com,renxinfei@shangpin.com,liuqinqin@shangpin.com,yangliyu@shangpin.com,wangbin@shangpin.com,yangchennuo@shangpin.com,denise.lin@shangpin.com,wangmengyao@shangpin.com,liujingjing@shangpin.com,shilinhong@shangpin.com,lululu@shangpin.com
+to=joyce.xia@shangpin.com,lizhongren@shangpin.com,lubaijiang@shangpin.com,amanda.lee@shangpin.com,wangsaying@shangpin.com,maggie.zhang@shangpin.com,liufang@shangpin.com,zhaomanman@shangpin.com,wangwei@shangpin.com,liuhuihui@shangpin.com,liming@shangpin.com,guolihong@shangpin.com,renxinfei@shangpin.com,liuqinqin@shangpin.com,yangliyu@shangpin.com,wangbin@shangpin.com,yangchennuo@shangpin.com,denise.lin@shangpin.com,wangmengyao@shangpin.com,liujingjing@shangpin.com,shilinhong@shangpin.com
 subject=\=\=\=\=\=\=\u8BF7\u6CE8\u610F\uFF0C\u9644\u4EF6\u4E2D\u7684\u4EA7\u54C1\u4EF7\u683C\u53D1\u751F\u4E86\u53D8\u5316\=\=\=\=\=\=\=\=\=\=
 messageType=text/html;charset\=utf-8
 
@@ -47,7 +47,7 @@ efashion=2015111001657
 pavin=2015093001569
 
 supplierId_diffSeason=2015081701439
-sendMaildiffSeason_Schedule=0 24 14 * * ?
+sendMaildiffSeason_Schedule=0 12 12 * * ?
 diffSeasonFilepath=/usr/local/tomcat7/webapps/diffSeason.csv
 
 pictmpdownloadpath=/data/picturetem/
