--- a/picturedown/src/main/resources/log4j.properties
+++ b/picturedown/src/main/resources/log4j.properties
@@ -1,10 +1,10 @@
 #root
-log4j.rootLogger=WARN, file
+log4j.rootLogger=INFO, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
-log4j.appender.file.File=log/sysn-logs.log
+log4j.appender.file.File=log/picturedown-logs.log
 log4j.appender.file.Append=true
-log4j.appender.file.MaxFileSize=5MB
+log4j.appender.file.MaxFileSize=50MB
 log4j.appender.file.MaxBackupIndex=0
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
@@ -17,7 +17,7 @@ log4j.logger.info=INFO, info
 #规定每天产生日志的格式
 log4j.appender.info=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.info.Encoding=UTF-8
-log4j.appender.info.File=log/sysn-info.log
+log4j.appender.info.File=log/picturedown-info.log
 log4j.appender.info.Append=true
 log4j.appender.info.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.info.MaxFileSize=1MB
@@ -32,7 +32,7 @@ log4j.logger.error=ERROR, error
 #规定每天产生日志的格式
 log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.error.Encoding=UTF-8
-log4j.appender.error.File=log/sysn-error.log
+log4j.appender.error.File=log/picturedown-error.log
 log4j.appender.error.Append=true
 log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
@@ -42,15 +42,3 @@ log4j.appender.error.layout.ConversionPattern=\r\n--------Start----------\r\n[%-
 #自定义日志不输入到log4j.rootLogger模式
 log4j.additivity.error=false
 
-#log4j for mongodb
-log4j.logger.mongodb=INFO, MongoDB
-#org.log4mongo.MongoDbAppender
-log4j.appender.MongoDB=com.shangpin.iog.common.utils.log.mongodb.MyMongoDbAppender
-#mongodb库名
-log4j.appender.MongoDB.databaseName=iog
-#mongodb表名
-log4j.appender.MongoDB.collectionName=operate_log
-log4j.appender.MongoDB.hostname=@db.MongoDB.hostname@
-log4j.appender.MongoDB.port=27017
-#自定义日志不输入到log4j.rootLogger模式
-log4j.additivity.mongodb=false
