--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -51,3 +51,6 @@ sendMaildiffSeason_Schedule=0 12 12 * * ?
 diffSeasonFilepath=/usr/local/tomcat7/webapps/diffSeason.csv
 
 pictmpdownloadpath=/data/picturetem/
+#pictmpdownloadpath=F:\\testpics
+tmpfffff=/usr/local/tomcat7/webapps/tmpfffff
+#tmpfffff=F:\\testpics\\upload
