--- a/report/src/main/resources/conf.properties
+++ b/report/src/main/resources/conf.properties
@@ -7,3 +7,6 @@ to=lizhongren@shangpin.com,liming@shangpin.com,justin.wu@shangpin.com,jacky.zhan
 subject=\u9644\u4EF6\u4E3A\u5C1A\u672A\u5904\u7406\u7684\u65B0\u5B63\u6570\u91CF
 messageType=text/html;charset\=utf-8
 filepath=e:/tmp/nohandle.csv
+
+startDate=
+endDate=
