日期格式写错

--- a/magway-order/src/main/resources/conf.properties
+++ b/magway-order/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
-supplierId=201603161353
-supplierNo=
+supplierId=2016033101832
+supplierNo=S0000750
 url_token=http://open.1magway.com/test/OAuth/Token
 url_createOrder=http\://open.1magway.com/test/Order/CreateOrder
 url_getOrderConfirmState=http://open.1magway.com/test/Order/GetOrderConfirmState?orderCode=
