--- a/optical/src/main/resources/conf.properties
+++ b/optical/src/main/resources/conf.properties
@@ -2,5 +2,5 @@ supplierId=2015101301604
 day=90
 picpath=
 
-excel.url=http://www.opticalscribe.com/spfiles/spfilexls.xlsx
+excel.url=http://www.opticalscribe.com/spfiles/spfilexls.xml
 excel.filepath=F\:\\spfilexls.xlsx
