--- a/opticalscribe/src/main/resources/conf.properties
+++ b/opticalscribe/src/main/resources/conf.properties
@@ -1,3 +1,5 @@
-supplierId=2015101301604
-uri=http://www.opticalscribe.com/
-day=90
+supplierId=2016
+uri=http://www.farfetch.com/cn/shopping/women/clothing-1/items.aspx?ffref=hd_mnav&discount=0-0
+gender=women
+page=147
+path=F://sss.xlsx
