--- a/picturedown/src/main/resources/ftp.properties
+++ b/picturedown/src/main/resources/ftp.properties
@@ -6,8 +6,8 @@ to=lizhongren@shangpin.com
 subject=\u9644\u4EF6\u4E3A\u5C1A\u672A\u5904\u7406\u7684\u65B0\u5B63\u6570\u91CF
 messageType=text/html;charset\=utf-8
 #jsonFilepath=F:\\testpics\\ftpSupplier.json
-jsonFilepath=F:\\testpics\\ftpSupplier.json
-#downloadPath=F:\\testpics\\
-downloadPath=/data/picturetem/
+jsonFilepath=F\:\\testpics\\ftpSupplier.json
+downloadPath=F:\\testpics\\
+#downloadPath=/data/picturetem/
 
 
