--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -35,12 +35,24 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##italiani
-supplierId=201608101733
-api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
+#supplierId=201608101733
+#api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=italiani
+#savePath=F\:\\Atelier-template
+
+##wise
+supplierId=2016083001937
+api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=italiani
+password=Shang1808
 savePath=F\:\\Atelier-template
+
