--- a/wise-order/build.gradle
+++ b/wise-order/build.gradle
@@ -1,32 +1,24 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
-
-sourceCompatibility = 1.5
-version = '1.0'
-jar {
-    manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart',
-                   'Implementation-Version': version
-    }
-}
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
-    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
-}
+    compile(
+            project(':iog-common-product'),
+            project(':openapi-ice'),
+            "net.sourceforge.javacsv:javacsv:2.0"
+    )
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 
-test {
-    systemProperties 'property': 'value'
-}
 
-uploadArchives {
-    repositories {
-       flatDir {
-           dirs 'repos'
-       }
+}
+jar {
+    dependsOn copyToLib, copyResources
+    exclude ("**/*.properties")
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.giglio.order.Startup'
+         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
