--- a/Atelier-stock-template/src/main/resources/conf.properties
+++ b/Atelier-stock-template/src/main/resources/conf.properties
@@ -27,9 +27,17 @@ time=3600000
 #savePath=F\:\\Atelier-stock-template
 
 ##wise
-supplierId=2016083001937
-api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
+#supplierId=2016083001937
+#api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
+#sku_interface=GetAllAvailabilityMarketplace
+#userName=shangpin
+#password=Shang1808
+#savePath=F\:\\Atelier-stock-template
+
+##Createve99
+supplierId=2016030401795
+api_url=http://79.60.136.177/ws_sito/ws_sito_p15.asmx/
 sku_interface=GetAllAvailabilityMarketplace
 userName=shangpin
-password=Shang1808
+password=creative99
 savePath=F\:\\Atelier-stock-template
