--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -46,13 +46,23 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##wise
-supplierId=2016083001937
-api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
+#supplierId=2016083001937
+#api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=Shang1808
+#savePath=F\:\\Atelier-template
+
+##Creative99
+supplierId=2016030401795
+api_url=http://79.60.136.177/ws_sito/ws_sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=Shang1808
+password=creative99
 savePath=F\:\\Atelier-template
-
