--- a/synchSupplierIdAndSpId/build.gradle
+++ b/synchSupplierIdAndSpId/build.gradle
@@ -16,7 +16,7 @@ jar{
         "lib/${file.name}"
     }.join(' ')
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.report.client.StartUp'
+        attributes 'Main-Class': 'com.shangpin.iog.client.StartUp'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
