papini&export-product

--- a/export-product/src/main/resources/conf.properties
+++ b/export-product/src/main/resources/conf.properties
@@ -1,4 +1,6 @@
-savepath=/data/product/
+#savepath=/data/product/
+savepath=F:\\testpics
+picpath=F:\\testpics
 #yyyy-MM-dd
 startDate=
 #yyyy-MM-dd HH:mm:ss
