--- a/iog-common-product/build.gradle
+++ b/iog-common-product/build.gradle
@@ -6,5 +6,7 @@ dependencies {
             project(':project-dao')
 
     )
+    // https://mvnrepository.com/artifact/org.apache.poi/poi
+	compile group: 'org.apache.poi', name: 'poi', version: '3.15-beta2'    
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
