--- a/papini/src/main/resources/conf.properties
+++ b/papini/src/main/resources/conf.properties
@@ -1,3 +1,5 @@
 supplierId=2016030401797
-url=http://80.88.89.209/papini/doc/Export_xmlProducer_xiu078.zip
+#url=http://80.88.89.209/papini/doc/Export_xmlProducer_xiu078.zip
 day=90
+picpath=
+jsonUrl=http://80.88.89.209/papiniapi/MyApi/Productslist/GetProducts?DBContext=Default&CategoryId=&BrandId=&SeasonCode=079&StartIndex=1&EndIndex=0&key=doV3IeZ6bz
