--- a/export-product/src/main/resources/conf.properties
+++ b/export-product/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
 #savepath=/data/product/
-savepath=F:\\testpics
-picpath=F:\\testpics
+savepath=F\:\\testpics
+picpath=F\:\\testpics
 #yyyy-MM-dd
 startDate=
 #yyyy-MM-dd HH:mm:ss
@@ -11,3 +11,10 @@ port=
 usrName=lizhongren
 password=123456
 remotePath=
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=lubaijiang@shangpin.com
+subject=
+messageType=text/html;charset=utf-8
