--- a/export-product/build.gradle
+++ b/export-product/build.gradle
@@ -12,6 +12,7 @@ dependencies {
          	"commons-dbcp:commons-dbcp:1.4",
          	"org.jdom:jdom:2.0.2",
     )
+    compile group: 'org.apache.ant', name: 'ant', version: '1.7.1'
     
     testCompile group: 'junit', name: 'junit', version: '4.11'
     
