--- a/lamborghini/src/main/resources/conf.properties
+++ b/lamborghini/src/main/resources/conf.properties
@@ -1,4 +1,8 @@
-supplierId=2016080301912
-url=http://lamborghini.edstema.it/api/v3.0/products.json?storeCode=8CJXT
+#supplierId=2016080301912
+#url=http://lamborghini.edstema.it/api/v3.0/products.json?storeCode=8CJXT
 max=500
 day=90
+
+supplierId=2016090610112
+#url=http://api.gebnegozi.com/api/v3.0/products.json?storeCode=DW3LT
+url=http://geb-testing.edstema.it/api/v3.0/products?storeCode=ZWZHC
