--- a/efashion-stock/build.gradle
+++ b/efashion-stock/build.gradle
@@ -14,6 +14,6 @@ jar {
     exclude ("**/*.properties")
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.efashion.stock.schedule.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.efashion.stock.StockImp'
     }
 }
