--- a/efashion/src/main/resources/conf.properties
+++ b/efashion/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-supplierId=2015111001657
+supplierId=201609061111
 #url=http://api.gebnegozi.com/api/v3.0/products.json?storeCode=DW3LT
 url=http://geb-testing.edstema.it/api/v3.0/products?storeCode=ZWZHC
 #url=http://demo-efashion.edstema.it/api/v3.0/products.json?storeCode=BTA6N
