--- a/opticalscribe/build.gradle
+++ b/opticalscribe/build.gradle
@@ -16,10 +16,17 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib, copyResources,dependsClassPath
+   
+    
+       dependsOn copyToLib, copyResources
     exclude ("**/*.properties")
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.opticalscribe.StartSkuJob'
+       attributes 'Main-Class': 'com.shangpin.iog.opticalscribe.StartSkuJob'
+         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
