--- a/opticalscribe/src/main/resources/conf.properties
+++ b/opticalscribe/src/main/resources/conf.properties
@@ -1,5 +1,6 @@
-supplierId=2016
-uri=http://www.farfetch.com/cn/shopping/women/clothing-1/items.aspx?ffref=hd_mnav&discount=0-0
-gender=women
-page=147
-path=F://sss.xlsx
+uri=http://www.farfetch.com/it/shopping/women/smets/items.aspx?q=smets
+#uri=http://www.farfetch.com/cn/shopping/women/clothing-1/items.aspx?ffref=hd_mnav&discount=0-0
+gender=men
+pageStart=
+pageEnd=
+path=F://women1.csv
