--- a/export-product/src/main/resources/conf.properties
+++ b/export-product/src/main/resources/conf.properties
@@ -1,4 +1,5 @@
 #savepath=/data/product/
+conf_suppliers=201603291836,201604251314
 savepath=F\:\\testpics
 picpath=F\:\\testpics
 #yyyy-MM-dd
@@ -17,4 +18,4 @@ from=chengxu@shangpin.com
 fromUserPassword=shangpin001
 to=lubaijiang@shangpin.com
 subject=
-messageType=text/html;charset=utf-8
+messageType=text/html;charset\=utf-8
