--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -54,3 +54,5 @@ pictmpdownloadpath=/data/picturetem/
 #pictmpdownloadpath=F:\\testpics
 tmpfffff=/usr/local/tomcat7/webapps/tmpfffff
 #tmpfffff=F:\\testpics\\upload
+data_product=/data/product
+#data_product=F:\\MyTest
