--- a/dante5/build.gradle
+++ b/dante5/build.gradle
@@ -13,17 +13,12 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib, copyResources, copyResourcesToClasses
+    dependsOn copyToLib, copyResources, dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.dante5.Startup'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
