--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -57,12 +57,25 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##Creative99
-supplierId=2016030401795
-api_url=http://79.60.136.177/ws_sito/ws_sito_p15.asmx/
+#supplierId=2016030401795
+#api_url=http://79.60.136.177/ws_sito/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=creative99
+#savePath=F\:\\Atelier-template
+
+##bagheera
+supplierId=2015100701573
+api_url=http://79.3.196.209/ws_sito_p15/ws_sito_p15.asmx/
 spu_interface=GetAllItemsMarketplace
 sku_interface=GetAllAvailabilityMarketplace
 image_interface=GetAllImageMarketplace
 price_interface=GetAllPricelistMarketplace
 userName=shangpin
-password=creative99
+password=Shangpin0609
 savePath=F\:\\Atelier-template
+
+
