--- a/atelier-paolo/build.gradle
+++ b/atelier-paolo/build.gradle
@@ -6,6 +6,7 @@ dependencies {
            		"com.google.code.gson:gson:2.3.1",
             project(':iog-common-product'),
             project(':iog-product-framework'),
+            "net.sourceforge.javacsv:javacsv:2.0",
  
     )
 }
