--- a/opticalscribe/src/main/resources/conf.properties
+++ b/opticalscribe/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
-uri=http://www.farfetch.com/it/shopping/women/smets/items.aspx?q=smets
-#uri=http://www.farfetch.com/cn/shopping/women/clothing-1/items.aspx?ffref=hd_mnav&discount=0-0
+#uri=http://www.farfetch.com/it/shopping/women/smets/items.aspx?q=smets
+uri=http://www.farfetch.com/cn/shopping/women/shoes-1/items.aspx?ffref=hd_snav
 gender=men
 pageStart=
 pageEnd=
-path=F://women1.csv
+path=F://womenShoesNew.csv
