--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -50,9 +50,11 @@ supplierId_diffSeason=2015081701439
 sendMaildiffSeason_Schedule=0 12 12 * * ?
 diffSeasonFilepath=/usr/local/tomcat7/webapps/diffSeason.csv
 
-pictmpdownloadpath=/data/picturetem/
-#pictmpdownloadpath=F:\\testpics
-tmpfffff=/usr/local/tomcat7/webapps/tmpfffff
-#tmpfffff=F:\\testpics\\upload
-data_product=/data/product
-#data_product=F:\\MyTest
+#pictmpdownloadpath=/data/picturetem/
+pictmpdownloadpath=F:\\testpics
+#tmpfffff=/usr/local/tomcat7/webapps/tmpfffff
+tmpfffff=F:\\testpics\\upload
+#data_product=/data/product
+data_product=F:\\MyTest
+
+local_picturetem=/usr/local/picturetem/
