--- a/project-dao/src/main/resources/mongo.properties
+++ b/project-dao/src/main/resources/mongo.properties
@@ -1,2 +1,5 @@
 Mongodb.Address = @db.MongoDB.hostname@
-MongoDB.Port = @db.MongoDB.port@
+MongoDB.Port =@db.MongoDB.port@
+
+#Mongodb.Address =192.168.20.82
+#MongoDB.Port =27017
