--- a/project-dao/src/main/resources/datasource.properties
+++ b/project-dao/src/main/resources/datasource.properties
@@ -3,7 +3,7 @@ db.password=@db.password@
 db.url=@db.url@
 db.driverClassName=@db.driverClassName@
 
-
+#db.driverClassName = com.mysql.jdbc.Driver
 #db.url =jdbc:mysql://49.213.13.167:3306/iog?useUnicode=true&amp;characterEncoding=utf-8
 #db.username = shangpin
 #db.password = shangpin@123
