--- a/efashion-order/src/main/resources/conf.properties
+++ b/efashion-order/src/main/resources/conf.properties
@@ -1,8 +1,8 @@
 supplierId=2015111001657
 supplierNo=S0000593
 #url=http://api.gebnegozi.com/api/v2/place/order.json?storeCode=DW3LT
-cancelUrl=http://geb-production.edstema.it/api/v3.0/cancel/order.json?storeCode=ZWZHC
-placeUrl=http://geb-production.edstema.it/api/v3.0/place/order.json?storeCode=ZWZHC
+cancelUrl=http://geb-production.edstema.it/api/v3.0/cancel/order.json?storeCode=DW3LT
+placeUrl=http://geb-production.edstema.it/api/v3.0/place/order.json?storeCode=DW3LT
 startDateOfTemp=
 endDateOfTemp=
 
