--- a/Atelier-stock-template/src/main/resources/conf.properties
+++ b/Atelier-stock-template/src/main/resources/conf.properties
@@ -18,13 +18,21 @@ time=3600000
 #password=Leam1803
 #savePath=F\:\\Atelier-stock-template
 
-##italiani
-#supplierId=201608101733
-#api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
+##Daniello
+#supplierId=2016011201731
+#api_url=http://79.62.242.6:8088/ws_sito/ws_sito_p15.asmx/
 #sku_interface=GetAllAvailabilityMarketplace
 #userName=shangpin
-#password=italiani
+#password=Daniello0203
 #savePath=F\:\\Atelier-stock-template
+
+##italiani
+supplierId=2016092001943
+api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
+sku_interface=GetAllAvailabilityMarketplace
+userName=shangpin
+password=italiani
+savePath=F\:\\Atelier-stock-template
 
 ##wise
 #supplierId=2016083001937
@@ -35,9 +43,27 @@ time=3600000
 #savePath=F\:\\Atelier-stock-template
 
 ##Createve99
-supplierId=2016030401795
-api_url=http://79.60.136.177/ws_sito/ws_sito_p15.asmx/
-sku_interface=GetAllAvailabilityMarketplace
-userName=shangpin
-password=creative99
-savePath=F\:\\Atelier-stock-template
+#supplierId=2016030401795
+#api_url=http://79.60.136.177/ws_sito/ws_sito_p15.asmx/
+#sku_interface=GetAllAvailabilityMarketplace
+#userName=shangpin
+#password=creative99
+#savePath=F\:\\Atelier-stock-template
+
+##bagheera
+#supplierId=2015100701573
+#api_url=http://79.3.196.209/ws_sito_p15/ws_sito_p15.asmx/
+#sku_interface=GetAllAvailabilityMarketplace
+#userName=shangpin
+#password=Shangpin0609
+#savePath=F\:\\Atelier-stock-template
+
+##tessabit
+#supplierId=2015091701503
+#api_url=http://46.44.241.30/WS_Sito_P15/ws_sito_p15.asmx/
+#sku_interface=GetAllAvailabilityMarketplace
+#userName=shangpin
+#password=shang1907
+#savePath=F\:\\Atelier-stock-template
+
+
