--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -2,6 +2,7 @@ day=90
 picpath=
 
 ##Vietti
+#identity=vi
 #supplierId=2016072601910
 #api_url=http://88.147.104.180/ws_sito_p15/ws_sito_p15.asmx/
 #spu_interface=GetAllItemsMarketplace
@@ -13,6 +14,7 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##leam
+#identity=leam
 #supplierId=2015081701441
 #api_url=http://62.101.102.194:1080/ws_sito_p15/ws_sito_p15.asmx/
 #spu_interface=GetAllItemsMarketplace
@@ -24,6 +26,7 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##Daniello
+#identity=dan
 #supplierId=2016011201731
 #api_url=http://79.62.242.6:8088/ws_sito/ws_sito_p15.asmx/
 #spu_interface=GetAllItemsMarketplace
@@ -35,17 +38,19 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##italiani
-#supplierId=201608101733
-#api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
-#spu_interface=GetAllItemsMarketplace
-#sku_interface=GetAllAvailabilityMarketplace
-#image_interface=GetAllImageMarketplace
-#price_interface=GetAllPricelistMarketplace
-#userName=shangpin
-#password=italiani
-#savePath=F\:\\Atelier-template
+identity=it
+supplierId=2016092001943
+api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
+spu_interface=GetAllItemsMarketplace
+sku_interface=GetAllAvailabilityMarketplace
+image_interface=GetAllImageMarketplace
+price_interface=GetAllPricelistMarketplace
+userName=shangpin
+password=italiani
+savePath=F\:\\Atelier-template
 
 ##wise
+#identity=wise
 #supplierId=2016083001937
 #api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
 #spu_interface=GetAllItemsMarketplace
@@ -57,6 +62,7 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##Creative99
+#identity=cr
 #supplierId=2016030401795
 #api_url=http://79.60.136.177/ws_sito/ws_sito_p15.asmx/
 #spu_interface=GetAllItemsMarketplace
@@ -68,14 +74,29 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##bagheera
-supplierId=2015100701573
-api_url=http://79.3.196.209/ws_sito_p15/ws_sito_p15.asmx/
-spu_interface=GetAllItemsMarketplace
-sku_interface=GetAllAvailabilityMarketplace
-image_interface=GetAllImageMarketplace
-price_interface=GetAllPricelistMarketplace
-userName=shangpin
-password=Shangpin0609
-savePath=F\:\\Atelier-template
+#identity=bagh
+#supplierId=2015100701573
+#api_url=http://79.3.196.209/ws_sito_p15/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=Shangpin0609
+#savePath=F\:\\Atelier-template
+
+##tessabit
+#identity=tessabit
+#supplierId=2015091701503
+#api_url=http://46.44.241.30/WS_Sito_P15/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=shang1907
+#savePath=F\:\\Atelier-template
+
+
 
 
