--- a/eleonorabonucci/bin/conf.properties
+++ b/eleonorabonucci/bin/conf.properties
@@ -1,4 +1,4 @@
 
 supplierId=2015100901579
 day=90
-url=http://eleonorabonucci.com/RSS/FEED_PRODUCT.aspx
+url==http://eleonorabonucci.com/FEED_PRODUCT/59950/hk
