--- a/justFashion-order/src/main/resources/conf.properties
+++ b/justFashion-order/src/main/resources/conf.properties
@@ -1,8 +1,12 @@
-supplierId=2015121101695
-supplierNo=S00001
+supplierId=2015092401528
+supplierNo=S0000432
 
 jobsSchedule=0 0/2 * * * ? 
 jobsScheduleConfirm=0 0/2 * * * ?
 
 startDateOfTemp=
 endDateOfTemp=
+
+authKey=270Api002#3gU8zXs
+channel=SHANGPIN
+jssecacerts=E:\\
