--- a/Atelier-template/src/main/resources/conf.properties
+++ b/Atelier-template/src/main/resources/conf.properties
@@ -38,16 +38,16 @@ picpath=
 #savePath=F\:\\Atelier-template
 
 ##italiani
-identity=it
-supplierId=2016092001943
-api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
-spu_interface=GetAllItemsMarketplace
-sku_interface=GetAllAvailabilityMarketplace
-image_interface=GetAllImageMarketplace
-price_interface=GetAllPricelistMarketplace
-userName=shangpin
-password=italiani
-savePath=F\:\\Atelier-template
+#identity=it
+#supplierId=2016092001943
+#api_url=http://79.61.191.17/ws_sito/ws_sito_p15.asmx/
+#spu_interface=GetAllItemsMarketplace
+#sku_interface=GetAllAvailabilityMarketplace
+#image_interface=GetAllImageMarketplace
+#price_interface=GetAllPricelistMarketplace
+#userName=shangpin
+#password=italiani
+#savePath=F\:\\Atelier-template
 
 ##wise
 #identity=wise
@@ -97,6 +97,15 @@ savePath=F\:\\Atelier-template
 #password=shang1907
 #savePath=F\:\\Atelier-template
 
-
-
+##genteroma
+identity=genteroma
+supplierId=20160923000001
+api_url=http://extcloud.genteroma.net:8088/ws_sito/ws_sito_p15.asmx/
+spu_interface=GetAllItemsMarketplace
+sku_interface=GetAllAvailabilityMarketplace
+image_interface=GetAllImageMarketplace
+price_interface=GetAllPricelistMarketplace
+userName=shangpin
+password=Shang1807
+savePath=F\:\\Atelier-template
 
