--- a/openapi-ice/src/main/resources/openice.properties
+++ b/openapi-ice/src/main/resources/openice.properties
@@ -4,7 +4,7 @@ fromEmail=chengxu@shangpin.com
 emailPass=shangpin001
 email=lizhongren@shangpin.com
 delay=20
-redisUrl=@db.redisUrl@
+redisUrl=@db.redis.url@
 
 #yyyy-MM-dd HH:mm
 expStartTime=
