--- a/lungolivigno-order/src/main/resources/conf.properties
+++ b/lungolivigno-order/src/main/resources/conf.properties
@@ -5,5 +5,8 @@ jobsSchedule=0 0/2  * * * ?
 startDateOfTemp=
 endDateOfTemp=
 
+user_name=ll_web
+user_password=lng.r45h
 url_login=http://concordia.vdr-s.com/BSWebApi20/api/User/Login
-url_saveOrder=http://concordia.vdr-s.com/BSWebApi20/api/Order/SaveOrder?SessionId=
+url_saveOrder=http\://concordia.vdr-s.com/BSWebApi20/api/Order/SaveOrder?SessionId\=
+url_cancelOrder=http\://concordia.vdr-s.com/BSWebApi20/api/Order/CancelOrder?SessionId=
