--- a/Atelier-stock-template/src/main/resources/conf.properties
+++ b/Atelier-stock-template/src/main/resources/conf.properties
@@ -67,10 +67,19 @@ time=3600000
 #savePath=F\:\\Atelier-stock-template
 
 ##genteroma
-supplierId=20160923000001
-api_url=http://extcloud.genteroma.net:8088/ws_sito/ws_sito_p15.asmx/
+#supplierId=20160923000001
+#api_url=http://extcloud.genteroma.net:8088/ws_sito/ws_sito_p15.asmx/
+#sku_interface=GetAllAvailabilityMarketplace
+#userName=shangpin
+#password=Shang1807
+#savePath=F\:\\Atelier-stock-template
+
+##russo capri
+supplierId=2016030701799
+api_url=http://95.110.163.155:8580/ws_sito_shang/ws_sito_P15.asmx/
 sku_interface=GetAllAvailabilityMarketplace
 userName=shangpin
-password=Shang1807
+password=Shang2016
 savePath=F\:\\Atelier-stock-template
+
 
