--- a/Atelier-stock-template/src/main/resources/conf.properties
+++ b/Atelier-stock-template/src/main/resources/conf.properties
@@ -35,12 +35,13 @@ time=3600000
 #savePath=F\:\\Atelier-stock-template
 
 ##wise
-#supplierId=2016083001937
+supplierId=2016083001937
 #api_url=http://149.202.66.122/ws_sito_p15/ws_sito_p15.asmx/
-#sku_interface=GetAllAvailabilityMarketplace
-#userName=shangpin
-#password=Shang1808
-#savePath=F\:\\Atelier-stock-template
+api_url=https://at98p.wiseboutique.com/ws_sito_p15/ws_sito_p15.asmx/
+sku_interface=GetAllAvailabilityMarketplace
+userName=shangpin
+password=Shang1808
+savePath=F\:\\Atelier-stock-template
 
 ##Createve99
 #supplierId=2016030401795
@@ -75,11 +76,11 @@ time=3600000
 #savePath=F\:\\Atelier-stock-template
 
 ##russo capri
-supplierId=2016030701799
-api_url=http://95.110.163.155:8580/ws_sito_shang/ws_sito_P15.asmx/
-sku_interface=GetAllAvailabilityMarketplace
-userName=shangpin
-password=Shang2016
-savePath=F\:\\Atelier-stock-template
+#supplierId=2016030701799
+#api_url=http://95.110.163.155:8580/ws_sito_shang/ws_sito_P15.asmx/
+#sku_interface=GetAllAvailabilityMarketplace
+#userName=shangpin
+#password=Shang2016
+#savePath=F\:\\Atelier-stock-template
 
 
