--- a/revolve/src/main/resources/conf.properties
+++ b/revolve/src/main/resources/conf.properties
@@ -1,3 +1,4 @@
+#url=http://52.79.191.130/shangping/feed/products
 url=http://52.79.191.130/shangping/feed/products
 supplierId=2016051201891
 time=60
