--- a/biondini-stock/build.gradle
+++ b/biondini-stock/build.gradle
@@ -6,7 +6,15 @@ dependencies {
             project(':iog-service'),
             project(':project-dao'),
                project(':openapi-ice'),
-            project(':iog-common-product')
+            project(':iog-common-product'),
+            'javax.xml.rpc:javax.xml.rpc-api:1.1.1',  
+           	'commons-discovery:commons-discovery:0.5',
+           	'commons-logging:commons-logging:1.2',  
+           	'wsdl4j:wsdl4j:1.6.3',
+           	'org.apache.axis2:axis2-kernel:1.7.2',
+           	'org.apache.axis2:axis2-adb:1.7.2',
+           	'org.apache.axis2:axis2-transport-local:1.7.2',
+           	'org.apache.axis2:axis2-transport-http:1.7.2'
     )
 }
 
