--- a/removeLogs/build.gradle
+++ b/removeLogs/build.gradle
@@ -5,6 +5,8 @@ dependencies {
 	  	project(':project-common'),
 		project(':iog-common-product'),
 	)
+	compile group: 'org.apache.poi', name: 'poi', version: '3.15-beta2'
+    compile group: 'org.apache.ant', name: 'ant', version: '1.7.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
 }
